remove src folder

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <link rel="stylesheet" href="/src/style.css">
-  <link rel="stylesheet" href="./src/mediaQuery.css">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./mediaQuery.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>E-commerce</title>
@@ -33,9 +33,9 @@
     <div class="links">
       <a href="/">HOME</a>
       <a href="/about">ABOUT</a>
-      <a href="./src/product.html">PRODUCT</a>
+      <a href="./product.html">PRODUCT</a>
       <a href="/contact">CONTACT</a>
-      <a href="./src/cartItem.html" class="flex cartLenght"><i class="cart fa-solid fa-cart-shopping"></i>
+      <a href="./cartItem.html" class="flex cartLenght"><i class="cart fa-solid fa-cart-shopping"></i>
         <p id="cart-count">0</p>
       </a>
     </div>
@@ -197,7 +197,7 @@
     <p>Design and Code by shamim coder</p>
   </section>
 
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 
 </html>
