--- a/product.html
+++ b/product.html
@@ -86,7 +86,7 @@
     </section>
 
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 
 </html>
