fix toast errors

--- a/cartItem.html
+++ b/cartItem.html
@@ -86,7 +86,7 @@
         <p>Design and Code by shamim coder</p>
     </section>
 
-    <script type="module" src="./addToCartFromLS.js"></script>
+    <script type="module" src="addToCartFromLS.js"></script>
 </body>
 
 </html>
