--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="cartProductContainer container"></div>
   </section>
 
-  <div class="item-added">item added</div>
+  <div id="itemAdded">Item Add In Cart</div>
 
   <!-- footer section -->
   <footer class="container flex">
@@ -197,7 +197,7 @@
     <p>Design and Code by shamim coder</p>
   </section>
 
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
