--- a/product.html
+++ b/product.html
@@ -44,6 +44,8 @@
         <div class="cartProductContainer"></div>
     </section>
 
+    <div id="itemAdded">Item Add In Cart</div>
+
 
     <!-- footer section -->
     <footer class="container flex">
@@ -86,7 +88,7 @@
     </section>
 
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 
 </html>
