--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
     <div class="links">
       <a href="/">HOME</a>
-      <a href="/about">ABOUT</a>
+      <a href="#">ABOUT</a>
       <a href="./product.html">PRODUCT</a>
-      <a href="/contact">CONTACT</a>
+      <a href="#">CONTACT</a>
       <a href="./cartItem.html" class="flex cartLenght"><i class="cart fa-solid fa-cart-shopping"></i>
         <p id="cart-count">0</p>
       </a>
@@ -49,7 +49,7 @@
         <h1>Your Destination for Cutting-Edge Gadgets!</h1>
         <p>Welcome to Thapa eComStore, your ultimate destination for cutting-edge gadgets! Explore the latest in tech
           innovation and style with us. Shop now and discover a world of possibilities!</p>
-        <a href="./src/product.html"><button class="flex">Expolre Our Products <i
+        <a href="./product.html"><button class="flex">Expolre Our Products <i
               class="fa-solid fa-arrow-right"></i></button></a>
       </div>
       <div class="left-header">
