fix netlify route errors

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
     <div class="links">
       <a href="/">HOME</a>
-      <a href="#">ABOUT</a>
+      <a href="/">ABOUT</a>
       <a href="./product.html">PRODUCT</a>
-      <a href="#">CONTACT</a>
+      <a href="/">CONTACT</a>
       <a href="./cartItem.html" class="flex cartLenght"><i class="cart fa-solid fa-cart-shopping"></i>
         <p id="cart-count">0</p>
       </a>
