--- a/cartItem.html
+++ b/cartItem.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./mediaQuery.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-    <title>Document</title>
+    <title>E-commerce</title>
 </head>
 
 <body>
@@ -30,9 +30,9 @@
         </div>
         <div class="links">
             <a href="/">HOME</a>
-            <a href="/about">ABOUT</a>
+            <a href="/">ABOUT</a>
             <a href="./product.html">PRODUCT</a>
-            <a href="/contact">CONTACT</a>
+            <a href="/">CONTACT</a>
             <a href="#" class="flex cartLenght"><i class="cart fa-solid fa-cart-shopping"></i>
                 <p id="LS-count">0</p>
             </a>
